--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -4,7 +4,7 @@
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icons/icon.png"
+  image_path: "assets/icons/logo.png"
   # web:
   #   generate: true
   #   image_path: "path/to/image.png"
