--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,15 +49,17 @@ dependencies:
   dio: ^5.0.2
   retrofit: ^4.0.1
   flutter_spinkit: ^5.1.0
+  animate_do: ^3.0.2
   simple_animations: ^5.0.0+3
   cached_network_image: ^3.2.2
   event_bus: ^2.0.0
   logger: ^1.2.2
-  # mobcommonlib: ^1.1.4
-  # moblink: ^3.4.6
   # 启动图：dart run flutter_native_splash:create
   flutter_native_splash: ^2.3.0
-  flutter_sound: ^9.2.13
+  # flutter_sound: ^9.2.13
+  audioplayers: ^5.0.0
+  card_swiper: ^3.0.1
+  
 
 dev_dependencies:
   flutter_test:
@@ -119,7 +121,7 @@ flutter:
     - family: Music Street
       fonts:
         - asset: assets/fonts/c.otf
-     
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
